<resources>
    <string name="AddToStartPage">Add this to start page</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutDescriptionWithPubName">App APP_VERSION by PUB_NAME &lt;br /&gt; Powered by &lt;a href=\"APPSGEYSER_URL\"&gt;AppsGeyser.com&lt;/a&gt;</string>
    <string name="aboutDescriptionWithoutPubName">This App APP_VERSION is powered by &lt;a href=\"APPSGEYSER_URL\"&gt;AppsGeyser.com&lt;/a&gt;</string>
    <string name="aboutFlagText">&lt;b&gt;&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID&gt;Flag this App&lt;/a&gt;&lt;/b&gt;: Tell us if this app has objectionable content.</string>
    <string name="aboutLink">http://www.appsgeyser.com/ads/landing.php</string>
    <string name="ads_placement_tag_fs_on_exit">FS_onExit</string>
    <string name="ads_placement_tag_fs_on_menu_item_click">FS_onMenuItemClick</string>
    <string name="ads_placement_tag_fs_on_tab_changed">FS_onTabChanged</string>
    <string name="ads_placement_tag_fs_on_touch">FS_onTouch</string>
    <string name="ads_placement_tag_fs_on_web_page_changed">FS_onWebPageChanged</string>
    <string name="ads_placement_tag_rw_apply_theme">RW_applyTheme</string>
    <string name="ads_placement_tag_rw_js">RW_JS</string>
    <string name="ads_placement_tag_sm_main">SM_main</string>
    <string name="allow">Allow</string>
    <string name="allow_show_permission">Allow the application to notify about new posts?</string>
    <string name="apnxt_6_seconds">6 sec</string>
    <string name="apnxt_first_label">First game label First game label</string>
    <string name="apnxt_install_btn">Install</string>
    <string name="apnxt_play_this_video">Play this video</string>
    <string name="apnxt_thanks">Thanks for watching!</string>
    <string name="apnxt_which_video">Which Video would you like to watch?</string>
    <string name="apnxt_which_video_title">Which Video</string>
    <string name="apnxt_would_you_like">would you like to watch?</string>
    <string name="apnxt_would_you_like_break_line">would you like\10to watch?</string>
    <string name="apnxt_you_will_be_redirected">You will be redirected to Google Play once the ad will finish</string>
    <string name="appExitCaption">Do you really want to exit application?</string>
    <string name="app_caption">Ghostly Skills</string>
    <string name="app_metrica_id">34e75064-5ba5-4fac-b092-dc10aa167be0</string>
    <string name="app_metrica_on_start_event">{\"wid\":14510784,\"wname\":\"Ghostly Skills_14510784\",\"templates\":\"zip\",\"firstTemplate\":\"zip\",\"pid\":6994134}</string>
    <string name="app_name">Appsgeyser</string>
    <string name="app_version">App version: %1$s, Platform version: %2$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationID">softomate@softomate.com</string>
    <string name="appsgeysersdk_about_appsgeyser_logo_description">Appsgeyser logo</string>
    <string name="appsgeysersdk_about_dialog_flag">&lt;b&gt;&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID&gt;Flag this App&lt;/a&gt;&lt;/b&gt;: Tell us if this app has objectionable content.</string>
    <string name="appsgeysersdk_accept">Accept</string>
    <string name="appsgeysersdk_advertising_terms">Advertising Terms</string>
    <string name="appsgeysersdk_advertising_terms_message">Advertisements can be displayed at the top or bottom of the screen. A full screen advertisement can be displayed on app start or closure or after some user actions. If you click on the advertisement, you will be redirected to a third party web page.</string>
    <string name="appsgeysersdk_app_privacy">Privacy Policy</string>
    <string name="appsgeysersdk_app_tos">Terms of Service</string>
    <string name="appsgeysersdk_are_you_sure_decline_sdk">If you decline the TOS you won\'t be able to use this app. Are you sure?</string>
    <string name="appsgeysersdk_back">Back</string>
    <string name="appsgeysersdk_build">Build %1s</string>
    <string name="appsgeysersdk_close_app">Close app</string>
    <string name="appsgeysersdk_description_with_publish_name">App APP_VERSION by PUB_NAME &lt;br /&gt; Powered by &lt;a href=\"APPSGEYSER_URL\"&gt;AppsGeyser.com&lt;/a&gt; &lt;br /&gt; &lt;b&gt;&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID&gt;Flag this App&lt;/a&gt;&lt;/b&gt;: Tell us if this app has objectionable content.</string>
    <string name="appsgeysersdk_description_without_publish_name">This App APP_VERSION is powered by &lt;a href=\"APPSGEYSER_URL\"&gt;AppsGeyser.com&lt;/a&gt; &lt;br /&gt; &lt;b&gt;&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID&gt;Flag this App&lt;/a&gt;&lt;/b&gt;: Tell us if this app has objectionable content.</string>
    <string name="appsgeysersdk_eula_accept">Accept</string>
    <string name="appsgeysersdk_eula_decline">Decline</string>
    <string name="appsgeysersdk_eula_title">Privacy notice</string>
    <string name="appsgeysersdk_fasttrack_no_rew_video">Video not available</string>
    <string name="appsgeysersdk_loadinAdsProgressTitle">Loading advertisement</string>
    <string name="appsgeysersdk_message_viewer_app_icon_description">App icon</string>
    <string name="appsgeysersdk_message_viewer_launch_app">Launch App</string>
    <string name="appsgeysersdk_native_ad_activity">Market</string>
    <string name="appsgeysersdk_paused_content_activity_description">This app has been disabled for violation of our Terms of Service.</string>
    <string name="appsgeysersdk_recommendations_app_wall">Recommended applications:</string>
    <string name="appsgeysersdk_refuse">Refuse</string>
    <string name="appsgeysersdk_startupScreenTitle">Loading…</string>
    <string name="appsgeysersdk_you_may_like_app_wall">You may like this applications:</string>
    <string name="backButtonTitle">Back</string>
    <string name="bottomMenuItemMore">More</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build">Build</string>
    <string name="build_version">Build version</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chromeUserAgent">Mozilla/5.0 (Windows NT 6.2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/28.0.1464.0 Safari/537.36</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com_mopub_nativeads_sponsored_by">Sponsored by %s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="defaultUserAgent">Default User Agent</string>
    <string name="desktopUserAgent">Desktop User Agent</string>
    <string name="developer_info">Developer info</string>
    <string name="downloads_list">Downloads list</string>
    <string name="forwardButtonTitle">Forward</string>
    <string name="from">From</string>
    <string name="homeButtonTitle">Home</string>
    <string name="info_about">Information about application</string>
    <string name="login_hint">Login</string>
    <string name="menuAboutTitle">About</string>
    <string name="menuExitTitle">Exit</string>
    <string name="menuRefreshTitle">Refresh</string>
    <string name="menuShareTitle">Share</string>
    <string name="notification_shortcuts">Notification shortcuts</string>
    <string name="notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="requestDesktopVersion">Request desktop page</string>
    <string name="setNewUserAgent">Save and Apply</string>
    <string name="settings">Settings</string>
    <string name="show_notification_disabled">The notifications disabled</string>
    <string name="show_notifications">Show notifications</string>
    <string name="show_quick_access_bar">Show quick search bar</string>
    <string name="theming">Theming</string>
    <string name="theming_accent_desc">Presented theme colorAccent</string>
    <string name="theming_primary_dark_desc">Presented theme colorPrimaryDark</string>
    <string name="theming_primary_desc">Presented theme colorPrimary</string>
    <string name="time_show_notification">At the specified time will be show notifications</string>
    <string name="to">To</string>
    <string name="username">Name</string>
</resources>