<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_arrow_back_black_24dp" android:id="@+id/webapp_back" android:visible="false" android:orderInCategory="49" android:title="@string/backButtonTitle"/>
    <item android:icon="@drawable/ic_arrow_forward_black_24dp" android:id="@+id/webapp_forward" android:visible="false" android:orderInCategory="50" android:title="@string/forwardButtonTitle"/>
    <item android:icon="@drawable/outline_desktop_windows_black_24" android:id="@+id/webapp_request_desktop" android:checked="false" android:visible="false" android:orderInCategory="50" android:title="@string/requestDesktopVersion" android:checkable="true"/>
    <item android:icon="@drawable/outline_offline_pin_black_24" android:id="@+id/webapp_add_to_home" android:visible="false" android:orderInCategory="50" android:title="@string/AddToStartPage"/>
    <item android:icon="@drawable/outline_home_black_24" android:id="@+id/webapp_home" android:visible="false" android:orderInCategory="2" android:title="@string/homeButtonTitle"/>
    <item android:icon="@drawable/outline_archive_black_24" android:id="@+id/webapp_downloads_list" android:visible="false" android:orderInCategory="5" android:title="@string/downloads_list"/>
    <item android:icon="@drawable/outline_settings_black_24" android:id="@+id/webapp_settings" android:visible="false" android:orderInCategory="4" android:title="@string/settings"/>
    <item android:icon="@drawable/outline_palette_black_24" android:id="@+id/webapp_theming" android:visible="false" android:orderInCategory="6" android:title="@string/theming"/>
    <item android:icon="@drawable/ic_menu_refresh" android:id="@+id/webapp_refresh" android:orderInCategory="3" android:title="@string/menuRefreshTitle"/>
    <item android:icon="@android:drawable/ic_menu_share" android:id="@+id/webapp_share" android:orderInCategory="97" android:title="@string/menuShareTitle"/>
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@+id/webapp_about" android:orderInCategory="98" android:title="@string/menuAboutTitle"/>
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@+id/webapp_exit" android:orderInCategory="100" android:title="@string/menuExitTitle"/>
</menu>
