<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="18sp" android:textColor="#ffffffff" android:gravity="left" android:id="@+id/username_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="12dp" android:layout_marginRight="20dp" android:text="@string/username"/>
    <EditText android:textSize="18sp" android:textColor="#ff000000" android:gravity="fill_horizontal" android:id="@+id/username_edit" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="12dp" android:hint="@string/login_hint" android:scrollHorizontally="true" android:layout_weight="1" android:inputType="text"/>
    <TextView android:textSize="18sp" android:textColor="#ffffffff" android:gravity="left" android:id="@+id/password_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/password"/>
    <EditText android:textSize="18sp" android:textColor="#ff000000" android:gravity="fill_horizontal" android:id="@+id/password_edit" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="12dp" android:hint="@string/password_hint" android:scrollHorizontally="true" android:layout_weight="1" android:inputType="textPassword"/>
</TableLayout>
