<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="10dp" android:paddingTop="2dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/defaultUserAgent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/defaultUserAgent"/>
        <RadioButton android:id="@+id/desktoptUserAgent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desktopUserAgent"/>
    </RadioGroup>
    <Button android:id="@+id/okButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/setNewUserAgent"/>
</LinearLayout>
