<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/color_preset_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/theming_card_margin" app:cardCornerRadius="@dimen/theming_card_corner_radius">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/color_preset_card_radiobutton" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/theming_card_radiobutton_margin_left" android:fontFamily="@font/opensans_regular" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.5"/>
        <ImageView android:id="@+id/color_preset_card_color_accent" android:layout_width="@dimen/theming_card_imageview_width" android:layout_height="@dimen/theming_card_imageview_height" android:layout_marginRight="@dimen/theming_card_imageview_margin_right" android:contentDescription="@string/theming_accent_desc" app:layout_constraintRight_toRightOf="0"/>
        <ImageView android:id="@+id/color_preset_card_color_primary" android:layout_width="@dimen/theming_card_imageview_width" android:layout_height="@dimen/theming_card_imageview_height" android:contentDescription="@string/theming_primary_desc" app:layout_constraintRight_toLeftOf="@+id/color_preset_card_color_accent"/>
        <ImageView android:id="@+id/color_preset_card_color_primary_dark" android:layout_width="@dimen/theming_card_imageview_width" android:layout_height="@dimen/theming_card_imageview_height" android:contentDescription="@string/theming_primary_dark_desc" app:layout_constraintRight_toLeftOf="@+id/color_preset_card_color_primary"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
